--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "daisyui": "^1.25.4",
     "pinia": "^2.0.21",
     "vue": "^3.2.37",
-    "vue-router": "4"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
